added multiple fetches and images for each pokemon card

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Pokemon</title>
   </head>
   <body>
+    <span id="pokemon-count">0</span>
     <h1>Pokemon</h1>
 
     <ul id="pokemon-list"></ul>
