--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Pokemon</title>
   </head>
   <body>
+    <input type="text" id="search" placeholder="Search Pokemon" onchange="filter() " />
     <h1>Pokemon</h1>
 
     <ul id="pokemon-list"></ul>
