added a search bar and functionality

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Pokemon</title>
   </head>
   <body>
-    <input type="text" id="search" placeholder="Search Pokemon" onchange="filter() " />
+    <input type="search" id="search" placeholder="Search Pokemon" autocomplete="off" />
     <h1>Pokemon</h1>
 
     <ul id="pokemon-list"></ul>
