added local storage

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <input type="search" id="search" placeholder="Search Pokemon" autocomplete="off" />
-    <h1>Pokemon</h1>
+    <h1>Pokémon </h1>
 
     <ul id="pokemon-list"></ul>
     <button id="load" onclick="fetchData()">Fetch</button>
