added image placeholders and optimized rendering

--- a/index.html
+++ b/index.html
@@ -8,8 +8,13 @@
     <title>Pokemon</title>
   </head>
   <body>
-    <input type="search" id="search" placeholder="Search Pokemon" autocomplete="off" />
-    <h1>Pokémon </h1>
+    <input
+      type="search"
+      id="search"
+      placeholder="Search Pokemon"
+      autocomplete="off"
+    />
+    <h1>Pokémon</h1>
 
     <ul id="pokemon-list"></ul>
     <button id="load" onclick="fetchData()">Fetch</button>
